Replace ModelMapper and fix controller methods